# LiDAR-SLAM-Core

./: .gitignore  CMakeLists.txt  vcpkg.json
include/: Camera.h  KDTree.h  Odometry.h  Scene.h  Shader.h  Utils.h  Visualizer.h
shaders/: default.frag  default.vert
src/: Camera.cpp  KDTree.cpp  Odometry.cpp  Scene.cpp  Shader.cpp  Utils.cpp  Visualizer.cpp  main.cpp
